--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.0",
     "cssnano": "^4.1.7",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "imagemin-webpack-plugin": "^2.3.0",
+    "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-inline-svg": "^3.1.1",
@@ -27,6 +28,7 @@
     "prettier": "^1.15.3",
     "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
