--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "static-site-webpack-habr",
-  "version": "3.0.0",
+  "name": "app",
+  "version": "1.0.0",
   "description": "HTML template",
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack serve --mode development --open",
     "build": "NODE_ENV=production webpack --mode production && prettier --print-width=120 --parser html --write dist/*.html"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.0",
-    "css-loader": "^4.3.0",
-    "cssnano": "^4.1.10",
-    "html-webpack-plugin": "^4.5.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^0.11.3",
-    "node-sass": "^4.14.1",
-    "postcss-inline-svg": "^3.1.1",
-    "postcss-loader": "^3.0.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "core-js": "3.13.0",
+    "css-loader": "^5.2.6",
+    "cssnano": "^5.0.4",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^6.0.0",
+    "postcss": "^8.3.0",
+    "postcss-inline-svg": "^5.0.0",
+    "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.5.0",
-    "prettier": "^1.15.3",
-    "raw-loader": "^1.0.0",
-    "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.1.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.11.0"
+    "postcss-pxtorem": "^6.0.0",
+    "prettier": "^2.3.0",
+    "raw-loader": "^4.0.2",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
